-changed some divisions to use bit shifting -fixed some bugs that caused Wheel to not work and FP.sin() not to work (particles with rotation were all out of whack, among other calcs)

--- a/branches/FixedPoint/build.properties
+++ b/branches/FixedPoint/build.properties
@@ -2,8 +2,8 @@ javadoc.dir=./${build.dir}/javadoc
 jar.file.name=${jar.file}-0.1.jar
 build.compiler=modern
 lib-ext.dir=./lib-ext
-jar.file=simpull
-app.name=simpull physics library
+jar.file=simpull-fixed-point
+app.name=simpull physics library (fixed-point)
 src.dir=./src
 cfg.dir=./cfg
 build.dir=./dist
