--- a/build.properties
+++ b/build.properties
@@ -2,8 +2,8 @@ javadoc.dir=./${build.dir}/javadoc
 jar.file.name=${jar.file}-0.1.jar
 build.compiler=modern
 lib-ext.dir=./lib-ext
-jar.file=simpull
-app.name=simpull physics library
+jar.file=simpull-fixed-point
+app.name=simpull physics library (fixed-point)
 src.dir=./src
 cfg.dir=./cfg
 build.dir=./dist
